Breakout Changelog
==================

2.0.5 - 04/24/2015
------------------

--------------------------------------------------------------

2.0.4 - 04/21/2015
------------------

* Updated to Bootstrap 3.3.4.
* Updated to FontAwesome 4.3.0.
* Fixed: Security vulnerabilities from `add_query_arg()` (see [here](https://make.wordpress.org/plugins/2015/04/20/fixing-add_query_arg-and-remove_query_arg-usage/))

--------------------------------------------------------------

2.0.3 - 01/25/2015
------------------

* Fixed duplicate closing `</a>` bug with dropdowns menus of main navigation.
* Minor security fix.

--------------------------------------------------------------

2.0.2 - 11/25/2014
------------------

* Important security fix.
* Updated user documentation included in theme package, including new videos for Layout Builder plugin v2 update.

--------------------------------------------------------------

2.0.1 - 05/15/2014
------------------

* Fixed main menu's home button bug on tablet view.

--------------------------------------------------------------

2.0.0 - 05/12/2014
------------------

*Warning: Make sure to read this article before updating: [Updating to theme with framework 2.3+](http://support.themeblvd.com/updating-to-framework-v2-3/)*

* **Updated Theme Blvd framework to 2.4.4**
* Admin styling adjustments for WordPress 3.8+
* Improvements and fixes for WordPress 3.6+
	* Added support for WordPress 3.5+ media uploader.
	* Added responsive support for self-hosted videos.
	* Added responsive support for self-hosted audio files.
	* Resulting pagination from using `<!--nextpage-->` is now filtered to output like framework's pagination.
* Added [Twitter Bootstrap](http://twitter.github.io/bootstrap/) 3.1 and [FontAwesome](http://fortawesome.github.io/Font-Awesome/) 4.
	* Complete CSS overhaul.
	* Basic HiDPI (i.e. Retina) support added to main layout elements.
	* Tons of responsive improvements for mobile devices and tablets.